# ticompile

./: .gitignore  .gitmodules  .golangci.yml  Makefile  README.md  go.mod  go.sum
arch/: trampoline.go  trampoline_asm.s  trampoline_test.go
ast/: bin_ops.go  col.go  constant.go  decimal_ops.go  decimal_opt_test.go  node.go  type_utils.go
compile/: llvm_bridge.go  llvm_bridge_test.go  trampoline.go  trampoline_test.go
cpp/: CMakeLists.txt  TiJIT.h  TiJIT_test.cpp  helpers.cpp  helpers.h  helpers_test.cpp  llvm_bridge.cpp  llvm_bridge.h  llvm_bridge_test.cpp
program/: abi.go  abi_test.go  machine_code.go  machine_code_test.go
tools/: Makefile  go.mod  go.sum  tools.go
